--- a/src/main/resources/de/developup/roboterarm/gui/GUIFenster.fxml
+++ b/src/main/resources/de/developup/roboterarm/gui/GUIFenster.fxml
@@ -106,8 +106,8 @@
                         <Circle fill="#4d4d4d" layoutX="335.0" layoutY="191.0" radius="40.0" stroke="#808080" strokeType="INSIDE" strokeWidth="4.0" />
                         <Rectangle arcHeight="25.0" arcWidth="25.0" fill="#1b1b1b" height="57.0" layoutX="5.0" layoutY="6.0" stroke="BLACK" strokeType="INSIDE" width="736.0" />
                         <Button fx:id="bGoHome" layoutX="100.0" layoutY="15.0" mnemonicParsing="false" onAction="#bGoHomeOnClick" prefHeight="38.0" prefWidth="129.0" styleClass="Buttons" stylesheets="@ResponsiveButtons.css" text="go Home" textFill="#fffefe" />
-                        <Button fx:id="MenuButton2" layoutX="314.0" layoutY="15.0" mnemonicParsing="false"  prefHeight="38.0" prefWidth="129.0" styleClass="Buttons" stylesheets="@ResponsiveButtons.css" text="Button" textFill="#fffefe" />
-                        <Button fx:id="menuButton3" layoutX="545.0" layoutY="15.0" mnemonicParsing="false"  prefHeight="38.0" prefWidth="129.0" styleClass="Buttons" stylesheets="@ResponsiveButtons.css" text="Button" textFill="#fffefe" />
+                        <Button fx:id="bDisconnect" layoutX="314.0" layoutY="15.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="129.0" styleClass="Buttons" stylesheets="@ResponsiveButtons.css" text="Disconnect" textFill="#fffefe" />
+                        <Button fx:id="bPigPlace" layoutX="545.0" layoutY="15.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="129.0" styleClass="Buttons" stylesheets="@ResponsiveButtons.css" text="Pig&amp;Place" textFill="#fffefe" />
                         <Rectangle fill="#333333" height="133.0" layoutX="6.0" layoutY="581.0" stroke="TRANSPARENT" strokeType="INSIDE" width="736.0" />
                         <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1866ab" height="7.0" layoutX="223.0" layoutY="560.0" stroke="TRANSPARENT" strokeType="INSIDE" width="690.0" />
                         <Ellipse fill="#4d4d4d" layoutX="232.0" layoutY="490.0" radiusX="65.0" radiusY="19.0" stroke="BLACK" strokeType="INSIDE" />
