--- a/src/main/resources/de/developup/roboterarm/gui/Init_Fanster.fxml
+++ b/src/main/resources/de/developup/roboterarm/gui/Init_Fanster.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <HBox fx:id="mHbox" alignment="CENTER" cache="true" fillHeight="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1278.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.developup.roboterarm.gui.InitController">
@@ -16,15 +16,27 @@
             <AnchorPane prefHeight="720.0" prefWidth="1278.0" />
             <HBox prefHeight="720.0" prefWidth="1278.0">
                <children>
-                  <VBox prefHeight="732.0" prefWidth="335.0">
+                  <AnchorPane prefHeight="720.0" prefWidth="338.0" style="-fx-background-color: #333333;">
                      <HBox.margin>
-                        <Insets />
+                        <Insets bottom="6.0" left="6.0" right="3.0" top="6.0" />
                      </HBox.margin>
-                  </VBox>
+                     <children>
+                        <Label layoutX="128.0" layoutY="64.0" prefHeight="39.0" prefWidth="74.0" text="Status" textFill="WHITE">
+                           <font>
+                              <Font size="27.0" />
+                           </font>
+                        </Label>
+                        <TextArea fx:id="statusArea" layoutX="9.0" layoutY="114.0" prefHeight="396.0" prefWidth="304.0" style="-fx-background-color: #4d4d4d; -fx-control-inner-background: #4d4d4d;">
+                           <opaqueInsets>
+                              <Insets bottom="5.0" right="3.0" top="6.0" />
+                           </opaqueInsets>
+                        </TextArea>
+                     </children>
+                  </AnchorPane>
                   <AnchorPane fx:id="deviceListPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="706.0" prefWidth="748.0" style="-fx-background-color: #333333;">
                      <children>
                         <ListView fx:id="deviceListView" layoutX="238.0" layoutY="164.0" prefHeight="321.0" prefWidth="311.0" style="-fx-background-color: #4d4d4d;" />
-                        <Label layoutX="165.0" layoutY="91.0" prefHeight="53.0" prefWidth="457.0" text="Wählen Sie aus den erreichbaren Geräten ein aus:" textFill="#f2f2f2">
+                        <Label layoutX="301.0" layoutY="93.0" prefHeight="53.0" prefWidth="204.0" text="SocketServer-Auswahl:" textFill="#f2f2f2">
                            <font>
                               <Font size="20.0" />
                            </font>
